# lithium

./: .gitignore  HANDOFF_API_PHASE1.md  HANDOFF_TIER_CLASSIFICATION.md  LICENSE  MODEL_EVAL.md  PLAN.md  PLAN_BEHAVIORAL_LEARNING_AND_LLM.md  PLAN_CHANNEL_TRAINING.md  PLAN_CHAT_TAB_RESTRUCTURE.md  PLAN_IMPLICIT_SIGNALS.md  PLAN_ONBOARDING_AND_DATA_READINESS.md  PLAN_SCORING_MODEL.md  README.md  RETIRED.md  TESTING_STRATEGY.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
.maestro/: 01_setup_screen.yaml  02_setup_to_briefing.yaml  03_briefing_empty.yaml  03_briefing_screen.yaml  04_navigate_all_tabs.yaml  05_create_rule.yaml  06_settings_interactions.yaml  07_notification_capture.yaml  07_run_analysis.yaml  08_create_rule_with_data.yaml  08_suggestion_flow.yaml  09_purge_data.yaml  10_stress_navigation.yaml  11_cold_start.yaml  12_permission_revoke.yaml  13_training_tab.yaml  14_suggestion_approve.yaml  15_queue_screen.yaml  16_rule_enforcement.yaml  17_queue_enforcement.yaml  18_suggestion_approve.yaml  19_qa_plumbing.yaml  complete-onboarding.yaml  grant-battery-exemption.sh  grant-listener.js  grant-permissions.js  grant-permissions.sh  inject-suggestion.js  revoke-listener.js  revoke-permissions.js  revoke-permissions.sh  rule-enforcement-helper.py  run-tests.sh  send-test-notification.js  send-test-notification.sh  verify-queue-enforcement.js  verify-rule-enforcement.js
app/: build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
diagnostics/: build.gradle.kts  consumer-rules.pro
gradle/: libs.versions.toml
training/: .gitignore  generate_data.py  (+2 more)
(+186 files in other folders)
